--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "bundle/supertab"]
 	path = bundle/supertab
 	url = git://github.com/ervandew/supertab.git
-[submodule "bundle/vim-pathogen"]
-	path = bundle/vim-pathogen
+[submodule "pathogen"]
+	path = pathogen
 	url = git://github.com/tpope/vim-pathogen.git
