--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pathogen"]
 	path = pathogen
 	url = git://github.com/tpope/vim-pathogen.git
+[submodule "fsharpbinding"]
+	path = fsharpbinding
+	url = git://github.com/fsharp/fsharpbinding.git
