--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/vimerl"]
 	path = bundle/vimerl
 	url = git://github.com/jimenezrick/vimerl.git
+[submodule "bundle/vim-colours-solarized"]
+	path = bundle/vim-colours-solarized
+	url = git://github.com/altercation/vim-colors-solarized.git
