--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "bundle/vim-colours-solarized"]
 	path = bundle/vim-colours-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "bundle/vim-sensible"]
+	path = bundle/vim-sensible
+	url = git://github.com/tpope/vim-sensible.git
