--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
 	url = git://github.com/scrooloose/syntastic.git
+[submodule "bundle/rust.vim"]
+	path = bundle/rust.vim
+	url = git://github.com/rust-lang/rust.vim.git
