--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "bundle/rust.vim"]
 	path = bundle/rust.vim
 	url = git://github.com/rust-lang/rust.vim.git
+[submodule "bundle/vim-jsx"]
+	path = bundle/vim-jsx
+	url = git://github.com/mxw/vim-jsx.git
